# Fake-News-Detector

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: analyzer.py  app.py  config.py  scraper.py  utils.py
